# chat-fastapi-websocket

./: .gitignore  connection_manager.py  pyproject.toml
app/: dev.py  main.py
models/: message.py
