[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Vitor <vitormatheus85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = {version = "^0.13.4", extras = ["standard"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
